--- a/views/details.ejs
+++ b/views/details.ejs
@@ -9,12 +9,12 @@
       <div class="content">
         <p><%= blog.body %></p>
       </div>
-      <!-- <a class="delete" data-doc="<%= blog._id %>">delete</a> -->
+      <a class="delete" data-doc="<%= blog._id %>">delete</a>
     </div>
 
     <%- include("./partials/footer.ejs") %>
 
-    <!-- <script>
+    <script>
       const trashcan = document.querySelector("a.delete");
 
       trashcan.addEventListener("click", (e) => {
@@ -27,6 +27,6 @@
           .then((data) => (window.location.href = data.redirect))
           .catch((err) => console.log(err));
       });
-    </script> -->
+    </script>
   </body>
 </html>
